Added about page, made an images directory and uploaded image, added a nav bar on both pages

--- a/index.html
+++ b/index.html
@@ -8,12 +8,18 @@
     <title>George Scott Portfolio Site</title>
 </head>
 <body>
-  <h1>George's Portfolio Site</h1>
+  <h1 class="Title">George's Portfolio Site</h1>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="#">Contact (currently blank)</a>
+  </nav>
   <p>Welcome to my website. Please enjoy your stay. The crisps are over there!</p>
   <h2>Past Experience</h2>
   <ul>
    <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
    <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
   </ul>
+  <a href="https://github.com/lancaster-coder1991">My GitHub</a>
 </body>
 </html>
