Added some additional position properties and html elements to the headers on each page, experimented with centering

--- a/about.html
+++ b/about.html
@@ -8,9 +8,14 @@
     <title>About</title>
 </head>
 <body>
-    <h1 class="Title">About</h1>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
+    <header>
+        <h1 class="Title">About</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="#">Contact (currently blank)</a>
+        </nav>
+    </header>
     <img src="./images/George Scott.jpg" alt="A picture of me at home" width="25%">
     <p>Hello! My name is George Scott. I've worked in the softare sector for a while, but I am only just starting to learnt o code professionally!</p>
     <a href="https://github.com/lancaster-coder1991">My GitHub</a>
