--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
     <title>George Scott Portfolio Site</title>
 </head>
 <body>
+  <header>
   <h1 class="Title">George's Portfolio Site</h1>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="about.html">About</a>
-    <a href="#">Contact (currently blank)</a>
-  </nav>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="#">Contact (currently blank)</a>
+    </nav>
+  </header>
   <p>Welcome to my website. Please enjoy your stay. The crisps are over there!</p>
   <h2>Past Experience</h2>
   <ul>
