added a qualifications list to home page, next step is to align this section next to past experience section

--- a/index.html
+++ b/index.html
@@ -17,11 +17,20 @@
     </nav>
   </header>
   <p>Welcome to my website. Please enjoy your stay. The crisps are over there!</p>
-  <h2>Past Experience</h2>
-  <ul>
-   <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
-   <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
-  </ul>
+  <section class="Main_Page_List" id="leftlist">
+    <h2>Past Experience</h2>
+    <ul>
+      <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
+      <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
+    </ul>
+  </section>
+  <section class="Main_Page_List" id="rightlist">
+    <h2>Qualifications</h2>
+    <ul>
+      <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
+      <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
+    </ul>
+  </section> 
   <a href="https://github.com/lancaster-coder1991">My GitHub</a>
 </body>
 </html>
