Managed to get the 2 lists on main page next to each other. Next step is adding more content to home page and styling appropriately

--- a/index.html
+++ b/index.html
@@ -17,20 +17,25 @@
     </nav>
   </header>
   <p>Welcome to my website. Please enjoy your stay. The crisps are over there!</p>
-  <section class="Main_Page_List" id="leftlist">
-    <h2>Past Experience</h2>
-    <ul>
-      <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
-      <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
-    </ul>
+  <section id="Main_Page_Lists">
+    <section class="Main_Page_List" id="leftlist">
+      <h2 class="list_header">Past Experience</h2>
+      <ul>
+        <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
+        <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
+      </ul>
+    </section>
+    <section class="Main_Page_List" id="rightlist">
+      <h2 class="list_header">Qualifications</h2>
+      <ul>
+        <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
+        <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
+      </ul>
+    </section>
+  </section>  
+  <section id="ExtraInfo">
+    
   </section>
-  <section class="Main_Page_List" id="rightlist">
-    <h2>Qualifications</h2>
-    <ul>
-      <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
-      <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
-    </ul>
-  </section> 
   <a href="https://github.com/lancaster-coder1991">My GitHub</a>
 </body>
 </html>
