Started testing with flex and grids

--- a/index.html
+++ b/index.html
@@ -1,41 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http_equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="index.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http_equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="index.css" />
     <title>George Scott Portfolio Site</title>
-</head>
-<body>
-  <header>
-  <h1 class="Title">George's Portfolio Site</h1>
+  </head>
+  <body>
+    <div id="titlediv">
+      <h1 class="Title">George Scott</br><div id="subtitle">Software Developer</div></h1>
+      <img
+        id="homeimg"
+        src="./images/George Scott.jpg"
+        alt="Picture of me"
+      />
+    </div>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="#">Contact (currently blank)</a>
+      <a href="#">Contact</a>
     </nav>
-  </header>
-  <p>Welcome to my website. Please enjoy your stay. The crisps are over there!</p>
-  <section id="Main_Page_Lists">
-    <section class="Main_Page_List" id="leftlist">
-      <h2 class="list_header">Past Experience</h2>
-      <ul>
-        <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
-        <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
-      </ul>
+    <p id="homebio">
+      Welcome to my portfolio website! I am a software developer based in
+      Lancaster, Lancashire. Read on to see my credentials, or use the
+      navigation bar above to find out more!
+    </p>
+    <section id="Main_Page_Top_Lists">
+      <section class="Main_Page_Top_List" id="topleftlist">
+        <h2 class="list_header">Past Experience</h2>
+        <ul>
+          <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
+          <li>Support Team Manager, Spektrix - 11/18-11/20</li>
+        </ul>
+      </section>
+      <section class="Main_Page_Top_List" id="toprightlist">
+        <h2 class="list_header">Education and Qualifications</h2>
+        <ul>
+          <li>NorthCoders full stack coding bootcamp graduate - Nov 2020</li>
+          <li>
+            MA Arts Management, Policy and Practice, Manchester University:
+            September 2014 - November 2016 (Merit)
+          </li>
+          <li>
+            BA Hons Music, Lancaster University: September 2009 - July 2012
+            (2:1)
+          </li>
+        </ul>
+      </section>
     </section>
-    <section class="Main_Page_List" id="rightlist">
-      <h2 class="list_header">Qualifications</h2>
-      <ul>
-        <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
-        <li>Support Team Manager, Spektrix - 11/18-11/20 </li>
-      </ul>
+    <section id="Main_Page_Bottom_Lists">
+      <section class="Main_Page_Bottom_List" id="bottomleftlist">
+        <h2 class="list_header">Technologies</h2>
+        <ul>
+          <li><b>Vanilla JavaScript</b></li>
+          <li><b>Frontend</b>: HTML, CSS, jQuery, React</li>
+          <li><b>Backend</b>: SQL, Servers and REST APIs, Knex, Express</li>
+          <li><b>Git and Github</b></li>
+          <li><b>SQL Server Reporting Services (SSRS)</b></li>
+          <li><b>Command Line</b></li>
+        </ul>
+      </section>
+      <section class="Main_Page_Bottom_List" id="bottomrightlist">
+        <h2 class="list_header">Technologies</h2>
+        <ul>
+          <li><b>Vanilla JavaScript</b></li>
+          <li><b>Frontend</b>: HTML, CSS, jQuery, React</li>
+          <li><b>Backend</b>: SQL, Servers and REST APIs, Knex, Express</li>
+          <li><b>Git and Github</b></li>
+          <li><b>SQL Server Reporting Services (SSRS)</b></li>
+          <li><b>Command Line</b></li>
+        </ul>
+      </section>
     </section>
-  </section>  
-  <section id="ExtraInfo">
-    
-  </section>
-  <a href="https://github.com/lancaster-coder1991">My GitHub</a>
-</body>
+    <section id="extra_info"></section>
+    <a href="https://github.com/lancaster-coder1991">My GitHub</a>
+  </body>
 </html>
