Add background to front page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http_equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>George Scott Portfolio Site</title>
   </head>
   <body>
@@ -19,22 +20,25 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
+      <a href="#">Projects</a>
       <a href="#">Contact</a>
     </nav>
     <p id="homebio">
-      Welcome to my portfolio website! I am a software developer based in
-      Lancaster, Lancashire. Read on to see my credentials, or use the
-      navigation bar above to find out more!
+      I am a trainee software developer currently based in the North-West of England. After a successful career in the arts sector delivering on many prolific projects such as a world-class classical music festival and summer school, I have gradually been turning to a career in software development.</br></br>
+
+      I have always had a natural aptitude for both music and maths, and I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. Alongside this, my turn towards software development has been aided by my 3+ years experience working in a software company servicing the arts sector. The team at Spektrix have encouraged me to learn to code on the job, and I have therefore been able to use my technical skills to drive success for the company's clients by delivering clever software solutions for everyday and bespoke issues.</br></br>
+      
+      I am now currently completing with my software development training via a full-time software development bootcamp with NorthCoders whilst on voluntary furlough from my current position. I keen to hear about part- or full-time work in the North-West as a software developer working with any language, and I'm available to chat any time! 
     </p>
-    <section id="Main_Page_Top_Lists">
-      <section class="Main_Page_Top_List" id="topleftlist">
+    <section id="Main_Page_Lists">
+      <section id="topleftlist">
         <h2 class="list_header">Past Experience</h2>
         <ul>
           <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
           <li>Support Team Manager, Spektrix - 11/18-11/20</li>
         </ul>
       </section>
-      <section class="Main_Page_Top_List" id="toprightlist">
+      <section id="toprightlist">
         <h2 class="list_header">Education and Qualifications</h2>
         <ul>
           <li>NorthCoders full stack coding bootcamp graduate - Nov 2020</li>
@@ -48,32 +52,37 @@
           </li>
         </ul>
       </section>
-    </section>
-    <section id="Main_Page_Bottom_Lists">
-      <section class="Main_Page_Bottom_List" id="bottomleftlist">
+      <section id="bottomleftlist">
         <h2 class="list_header">Technologies</h2>
         <ul>
-          <li><b>Vanilla JavaScript</b></li>
+          <li>Vanilla JavaScript</li>
           <li><b>Frontend</b>: HTML, CSS, jQuery, React</li>
-          <li><b>Backend</b>: SQL, Servers and REST APIs, Knex, Express</li>
-          <li><b>Git and Github</b></li>
-          <li><b>SQL Server Reporting Services (SSRS)</b></li>
-          <li><b>Command Line</b></li>
+          <li><b>Backend</b>: SQL, Servers and REST APIs, Knex.js, Express.js</li>
+          <li>Git and Github</li>
+          <li>QL Server Reporting Services (SSRS)</li>
+          <li>Command Line</li>
         </ul>
       </section>
-      <section class="Main_Page_Bottom_List" id="bottomrightlist">
-        <h2 class="list_header">Technologies</h2>
+      <section id="bottomrightlist">
+        <h2 class="list_header">Other Skills and Training</h2>
         <ul>
-          <li><b>Vanilla JavaScript</b></li>
-          <li><b>Frontend</b>: HTML, CSS, jQuery, React</li>
-          <li><b>Backend</b>: SQL, Servers and REST APIs, Knex, Express</li>
-          <li><b>Git and Github</b></li>
-          <li><b>SQL Server Reporting Services (SSRS)</b></li>
+          <li>Team Management</b></li>
+          <li>Mentoring</li>
+          <li>Grade 8 ABRSM Instrument Distinction (Viola)</li>
+          <li>Office Fire Marshal Training</li>
+          <li>Mental Health in the Workplace Training</li>
           <li><b>Command Line</b></li>
         </ul>
       </section>
     </section>
-    <section id="extra_info"></section>
-    <a href="https://github.com/lancaster-coder1991">My GitHub</a>
+    <footer>
+      <div id="footerdiv">
+        <a id="emailicon" target="_blank" href="mailto:grjscott1991@hotmail.com"><img src="./images/download.png" alt="email"></a>
+        <a id="linkedinlogo" target="_blank" href="https://www.linkedin.com/in/george-scott-89948072/"><img src="./images/lnikedin.png" alt="email"></a>
+        <a id="twitterlogo" target="_blank" href="https://twitter.com/ScottyDoodleDoo?s=09"><img src="./images/Twitter_logo_blue.png" alt="email"></a>
+        <a id="githublogo" target="_blank" href="https://github.com/lancaster-coder1991"><img src="./images/GitHub_Logo.png" alt=""></a>
+      </div>
+    </div>
+    </footer>
   </body>
 </html>
