completed background - comments in css left in

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>George Scott Portfolio Site</title>
   </head>
   <body>
+    <div class="wrapper">
     <div id="titlediv">
       <h1 class="Title">George Scott</br><div id="subtitle">Software Developer</div></h1>
       <img
@@ -17,6 +18,20 @@
         alt="Picture of me"
       />
     </div>
+    <ul class="bg-bubbles">
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+  </div>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
