--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   </div>
   </div>
     <nav>
-      <a href="index.html">Home</a>
+      <a class="active-page" href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="#">Projects</a>
       <a href="#">Contact</a>
