up until adding company logos

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <li>Grade 8 ABRSM Instrument Distinction (Viola)</li>
           <li>Office Fire Marshal Training</li>
           <li>Mental Health in the Workplace Training</li>
-          <li><b>Command Line</b></li>
+          <li>Advanced Communications Training</li>
         </ul>
       </section>
     </section>
