--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                 projects such as the delivery of a world-class classical music festival and summer school for gifted musicians in the heart of the Lake District.
             </p>
             <p id="thirdpara" class="biopara">Then, in April 2017, I joined Spektrix, a market-leading provider of ticketing, CRM and fundraising software primarily aimed at arts organisations. My initial position was working in their Support, Training and Consultancy (STC) department - helping clients with everyday use of the software and leading on longer-term data consultancy projects with them as well.
-                Whilst the responsibilities of this role were broad, it quickly became apparent that the areas in which I excelled were mentoring my fellow team members, driving internal initiatives to promote better company efficiency, and the many 'technical' aspects of the job. My proficiency in the former two of this list was demonstrated by my promotion to a management
+                Whilst the responsibilities of this role were broad, it quickly became apparent that the areas in which I excelled were mentoring my fellow team members, driving internal initiatives to promote better company efficiency, and the many 'technical' aspects of the job. My proficiency in the former two was demonstrated by my promotion to a management
                 position after only 18 months at the company. This saw me lead a new team of consultants to become a unit that was even greater than the sum of its parts, whilst also developing high-profile initiatives to reshape how the department operated as the company continued to grow rapidly.
             </p>
             <p id="fourthpara" class="biopara">However, even whilst enjoying managing and mentoring my colleagues, much of my time was still deliberately spent on working on the technical side of supporting the company's clients. This included working on website integrations with our software; developing and troubleshooting HTML, CSS and JavaScript, whilst also making use of the software's
@@ -61,8 +61,68 @@
             <p id="sixthpara" class="biopara">I have never taken to any line of work with as much enthusiasm, alacrity and enjoyment as exploring the art of coding (and I do believe that the way in which developers chose to solve problems and leave their personal mark on projects does make it an art). I cannot wait to get started in full-time work as a developer and to see where my new career will take me. I will always keep my
                 experience in delivering client-minded software solutions, team management and mentoring at the heart of my approach to any new role. I am looking forward to bringing this value to new working environments along with a huge amount of passion. Here's to the rest of my life!
             </p>
-        <img id="bioicon" src="./images/stave.jpg" alt="notes" />
+        <img id="bioicon1" src="./images/stave.jpg" alt="notes" />
+        <img id="bioicon2" src="./images/laptop.png" alt="notes" />
     </section>
+    <hr class="solid">
+    <h2 style="text-align:center">Past Experience</h2>
+    <ul id="past_experience">
+      <div class="experience_wrapper_grow">
+          <li class="grow"><b>Team Manager, Support and Training - Spektrix</b></br>
+          November 2018 - Present</br>
+        <ul>
+          <li>Managing and mentoring a team of consultants in delivering world-class technical support and system consultancy for a state of the art ticketing platform, creating and fostering a team that is even greater than the sum of its parts.</li>
+          <li>Instigating and managing internal initiatives, such as reorganising team structures based on the changing demands of the rapidly-growing company.</li>
+          <li>Developing cross-departmental learning initiatives, such as an SQL learning programme between the Engineering and Support departments.</li>
+          <li>Working with senior stakeholders at important clients to help ensure their needs continue to be met; working with partners in the sector to drive cross-initiatives such as joint events.</li>
+          <li>Continuing all of the technical support and consultancy work at my previous role at the company, listed below.</li>
+        </ul></li>
+        <img id ="spektrix_logo" src="./images/spektrixlogo.jpg" alt="">
+      </div>
+    <li class="grow"><b>Support and Training Consultant - Spektrix</b></br>
+      April 2017 - November 2018</br>
+    <ul>
+      <li>Providing technical support to clients using the company's market-leading ticketing platform, including: <ul>
+        <li>Website support; HTML, CSS and JavaScript troubleshooting, and using the company's REST API.</li>
+        <li>Bespoke report writing using XML data and Microsoft's SQL Server Reporting Services (SSRS).</li>
+        <li>Day-to-day solutions in setup of system concepts, such as automated emails and reports.</li>
+        <li>Ticketing hardware networking and troubleshooting.</li>
+      </ul></li>
+      <li>Developing and delivering system training sessions to staff members and clients, both remotely and on site.</li>
+      <li>Working on longer-term data analysis projects with clients to ensure their continued success and retention.</li>
+      <li>Developing and presenting content for the company's series of annual events.</li>
+    </ul></li>
+    <li class="grow"><b>Freelance Administrator - Westmorland Youth Orchestra</b></br>
+      September 2016 - December 2017</br>
+    <ul>
+      <li>Modernising the Orchestra's admin processes, such as the setup of a cloud storage system and updating their website with new content.</li>
+      <li>Organising a voluntary committee in undertaking work relating to rehearsal and concert administration.</li>
+      <li>Advertising for, interviewing and hiring new members of staff for the Orchestra, including a new conductor.</li>
+    </ul></li>
+    <li class="grow"><b>Administrative Assistant - Lake District Summer Music</b></br>
+      February 2015 - March 2017</br>
+    <ul>
+      <li>Providing administrative support in all areas supporting the production of a series of internationally-acclaimed classical music concerts, including venue liaison, website updating, box office work and finance work.</li>
+      <li>Managing the intake of new students and many other logistical aspects fo the organisation's summer school, including the administering of a student bursary budget of ~£50,000.</li>
+      <li>Overseeing the selection process for and implementation of new systems, most notably a complete transition in box office software and hardware over the course of 8 months.</li>
+    </ul></li>
+    </ul>
+    <hr class="solid">
+    <h2 style="text-align:center">Education</h2>
+    <ul id="education">
+      <li class="grow"><b>NorthCoders</b></br>
+      August 2020 - Present</br></br>
+      A full time intensive course in full stack software development, based on JavaScript and surrounding technologies, such as Nodejs, React and various libraries. The learning undertaken ranges from backend work, such as the setup of demo servers and seeding SQL databases,
+      to frontend work such as building responsive web applications using React. The aim of the course is to build a portfolio of projects, whilst also learning how to work on a developer (e.g. working in sprints, pair programming etc.). See the Projects page for a list of ongoing work that has come out of the course.
+  </li>
+    <li class="grow"><b>MA Arts Management, Policy and Practice - The University of Manchester</b></br>
+      September 2014 - November 2016</br></br>
+      Studied the politics, economics and practicality of managing arts organisations in the UK. Included a 15,000 word dissertation and a work placement at an arts organisation.</li>
+    <li class="grow"><b>BA Music - Lancaster University</b></br>
+      September 2009 - July 2012</br></br>
+      Studied the theory and performance of classical music. Also active in many societies, such as the Music society, and was course representative to the Faculty in my third year.
+    </li>
+    </ul>
     <footer>
         <div id="footerdiv">
           <a id="emailicon" target="_blank" href="mailto:grjscott1991@hotmail.com"><img src="./images/download.png" alt="email"></a>
