start my_work page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav>
       <a class="active-page" href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="#">Projects</a>
+      <a href="#">Examples of Work</a>
       <a href="#">Contact</a>
     </nav>
     <p id="homebio">
@@ -43,52 +43,10 @@
 
       I have always had a natural aptitude for both music and maths, and I believe these traits are part of the reason that I have been able to quickly understand the patterns and syntax that make up coding languages. Alongside this, my turn towards software development has been aided by my 3+ years experience working in a software company servicing the arts sector. The team at Spektrix have encouraged me to learn to code on the job, and I have therefore been able to use my technical skills to drive success for the company's clients by delivering clever software solutions for everyday and bespoke issues.</br></br>
       
-      I am now currently completing with my software development training via a full-time software development bootcamp with NorthCoders whilst on voluntary furlough from my current position. I keen to hear about part- or full-time work in the North-West as a software developer working with any language, and I'm available to chat any time! 
+      I am now currently completing with my software development training via a full-time software development bootcamp with NorthCoders whilst on voluntary furlough from my current position. I keen to hear about part- or full-time work in the North-West as a software developer working with any language, and I'm available to chat any time!</br></br>
+
+      <b>Please use the navigation bar to find out more!</b>
     </p>
-    <section id="Main_Page_Lists">
-      <section id="topleftlist">
-        <h2 class="list_header">Past Experience</h2>
-        <ul>
-          <li>Support and Training Consultant, Spektrix - 04/17-11/18</li>
-          <li>Support Team Manager, Spektrix - 11/18-11/20</li>
-        </ul>
-      </section>
-      <section id="toprightlist">
-        <h2 class="list_header">Education and Qualifications</h2>
-        <ul>
-          <li>NorthCoders full stack coding bootcamp graduate - Nov 2020</li>
-          <li>
-            MA Arts Management, Policy and Practice, Manchester University:
-            September 2014 - November 2016 (Merit)
-          </li>
-          <li>
-            BA Hons Music, Lancaster University: September 2009 - July 2012
-            (2:1)
-          </li>
-        </ul>
-      </section>
-      <section id="bottomleftlist">
-        <h2 class="list_header">Technologies</h2>
-        <ul>
-          <li>Vanilla JavaScript</li>
-          <li><b>Frontend</b>: HTML, CSS, jQuery, React</li>
-          <li><b>Backend</b>: SQL, Servers and REST APIs, Knex.js, Express.js</li>
-          <li>Git and Github</li>
-          <li>QL Server Reporting Services (SSRS)</li>
-          <li>Command Line</li>
-        </ul>
-      </section>
-      <section id="bottomrightlist">
-        <h2 class="list_header">Other Skills and Training</h2>
-        <ul>
-          <li>Team Management</b></li>
-          <li>Mentoring</li>
-          <li>Grade 8 ABRSM Instrument Distinction (Viola)</li>
-          <li>Office Fire Marshal Training</li>
-          <li>Mental Health in the Workplace Training</li>
-          <li>Advanced Communications Training</li>
-        </ul>
-      </section>
     </section>
     <footer>
       <div id="footerdiv">
