--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a class="active-page" href="about.html">About</a>
-      <a href="#">Projects</a>
+      <a href="my_work.html">Examples of Work</a>
       <a href="#">Contact</a>
     </nav>
     <h2 style="text-align:center">Bio</h2>
@@ -56,7 +56,7 @@
                 me to take advantage of the company's excellent learning and development programmes and to start teaching myself more complex JavaScript on the job, whilst also setting up my own company initiative that saw the company's software engineers teach members of the STC team basic SQL.
             </p>
             <p id="fifthpara" class="biopara">After about 18 months working and thriving in my management position, I decided to make the most out of the working conditions made necessary by the Covid-19 pandemic and volunteered for full-time furlough from my position in June 2020. The purpose of this was to prepare to undertake full-time training in software development.
-                As such, I signed up to study with NorthCoders, a provider of full-time, full stack software development bootcamps in the North of England, and began my formal studies with in August 2020 - I am on track to graduate in November 2020,
+                As such, I signed up to study with NorthCoders, a provider of full-time, full stack software development bootcamps in the North of England, and began my formal studies with in August 2020 - I am on track to graduate in November 2020.
             </p>
             <p id="sixthpara" class="biopara">I have never taken to any line of work with as much enthusiasm, alacrity and enjoyment as exploring the art of coding (and I do believe that the way in which developers chose to solve problems and leave their personal mark on projects does make it an art). I cannot wait to get started in full-time work as a developer and to see where my new career will take me. I will always keep my
                 experience in delivering client-minded software solutions, team management and mentoring at the heart of my approach to any new role. I am looking forward to bringing this value to new working environments along with a huge amount of passion. Here's to the rest of my life!
@@ -68,60 +68,86 @@
     <h2 style="text-align:center">Past Experience</h2>
     <ul id="past_experience">
       <div class="experience_wrapper_grow">
-          <li class="grow"><b>Team Manager, Support and Training - Spektrix</b></br>
+          <li class="experience"><b>Team Manager, Support and Training - Spektrix</b></br>
           November 2018 - Present</br>
-        <ul>
-          <li>Managing and mentoring a team of consultants in delivering world-class technical support and system consultancy for a state of the art ticketing platform, creating and fostering a team that is even greater than the sum of its parts.</li>
-          <li>Instigating and managing internal initiatives, such as reorganising team structures based on the changing demands of the rapidly-growing company.</li>
-          <li>Developing cross-departmental learning initiatives, such as an SQL learning programme between the Engineering and Support departments.</li>
-          <li>Working with senior stakeholders at important clients to help ensure their needs continue to be met; working with partners in the sector to drive cross-initiatives such as joint events.</li>
-          <li>Continuing all of the technical support and consultancy work at my previous role at the company, listed below.</li>
-        </ul></li>
-        <img id ="spektrix_logo" src="./images/spektrixlogo.jpg" alt="">
+            <ul>
+              <li>Managing and mentoring a team of consultants in delivering world-class technical support and system consultancy for a state of the art ticketing platform, creating and fostering a team that is even greater than the sum of its parts.</li>
+              <li>Instigating and managing internal initiatives, such as reorganising team structures based on the changing demands of the rapidly-growing company.</li>
+              <li>Developing cross-departmental learning initiatives, such as an SQL learning programme between the Engineering and Support departments.</li>
+              <li>Working with senior stakeholders at important clients to help ensure their needs continue to be met; working with partners in the sector to drive cross-initiatives such as joint events.</li>
+              <li>Continuing all of the technical support and consultancy work at my previous role at the company, listed below.</li>
+            </ul></li>
+        <img class="organisation_logo" src="./images/spektrixlogo.jpg" alt="spektrix_logo">
       </div>
-    <li class="grow"><b>Support and Training Consultant - Spektrix</b></br>
-      April 2017 - November 2018</br>
-    <ul>
-      <li>Providing technical support to clients using the company's market-leading ticketing platform, including: <ul>
-        <li>Website support; HTML, CSS and JavaScript troubleshooting, and using the company's REST API.</li>
-        <li>Bespoke report writing using XML data and Microsoft's SQL Server Reporting Services (SSRS).</li>
-        <li>Day-to-day solutions in setup of system concepts, such as automated emails and reports.</li>
-        <li>Ticketing hardware networking and troubleshooting.</li>
-      </ul></li>
-      <li>Developing and delivering system training sessions to staff members and clients, both remotely and on site.</li>
-      <li>Working on longer-term data analysis projects with clients to ensure their continued success and retention.</li>
-      <li>Developing and presenting content for the company's series of annual events.</li>
-    </ul></li>
-    <li class="grow"><b>Freelance Administrator - Westmorland Youth Orchestra</b></br>
-      September 2016 - December 2017</br>
-    <ul>
-      <li>Modernising the Orchestra's admin processes, such as the setup of a cloud storage system and updating their website with new content.</li>
-      <li>Organising a voluntary committee in undertaking work relating to rehearsal and concert administration.</li>
-      <li>Advertising for, interviewing and hiring new members of staff for the Orchestra, including a new conductor.</li>
-    </ul></li>
-    <li class="grow"><b>Administrative Assistant - Lake District Summer Music</b></br>
-      February 2015 - March 2017</br>
-    <ul>
-      <li>Providing administrative support in all areas supporting the production of a series of internationally-acclaimed classical music concerts, including venue liaison, website updating, box office work and finance work.</li>
-      <li>Managing the intake of new students and many other logistical aspects fo the organisation's summer school, including the administering of a student bursary budget of ~£50,000.</li>
-      <li>Overseeing the selection process for and implementation of new systems, most notably a complete transition in box office software and hardware over the course of 8 months.</li>
-    </ul></li>
+
+      <div class="experience_wrapper_grow">
+        <li class="grow"><b>Support and Training Consultant - Spektrix</b></br>
+          April 2017 - November 2018</br>
+          <ul>
+            <li>Providing technical support to clients using the company's market-leading ticketing platform, including: <ul>
+              <li>Website support; HTML, CSS and JavaScript troubleshooting, and using the company's REST API.</li>
+              <li>Bespoke report writing using XML data and Microsoft's SQL Server Reporting Services (SSRS).</li>
+              <li>Day-to-day solutions in setup of system concepts, such as automated emails and reports.</li>
+              <li>Ticketing hardware networking and troubleshooting.</li>
+            </ul></li>
+          <li>Developing and delivering system training sessions to staff members and clients, both remotely and on site.</li>
+          <li>Working on longer-term data analysis projects with clients to ensure their continued success and retention.</li>
+          <li>Developing and presenting content for the company's series of annual events.</li>
+        </ul></li>
+        <img class="organisation_logo" src="./images/spektrixlogo.jpg" alt="spektrix_logo">
+      </div>
+
+
+      <div class="experience_wrapper_grow">
+        <li class="grow"><b>Freelance Administrator - Westmorland Youth Orchestra</b></br>
+          September 2016 - December 2017</br>
+        <ul>
+          <li>Modernising the Orchestra's admin processes, such as the setup of a cloud storage system and updating their website with new content.</li>
+          <li>Organising a voluntary committee in undertaking work relating to rehearsal and concert administration.</li>
+          <li>Advertising for, interviewing and hiring new members of staff for the Orchestra, including a new conductor.</li>
+        </ul></li>
+        <img class="organisation_logo" src="./images/wyo_logo.png" alt="wyo_logo">
+      </div>  
+
+      <div class="experience_wrapper_grow">
+        <li class="grow"><b>Administrative Assistant - Lake District Summer Music</b></br>
+          February 2015 - March 2017</br>
+        <ul>
+          <li>Providing administrative support in all areas supporting the production of a series of internationally-acclaimed classical music concerts, including venue liaison, website updating, box office work and finance work.</li>
+          <li>Managing the intake of new students and many other logistical aspects fo the organisation's summer school, including the administering of a student bursary budget of ~£50,000.</li>
+          <li>Overseeing the selection process for and implementation of new systems, most notably a complete transition in box office software and hardware over the course of 8 months.</li>
+        </ul></li>
+        <img id="ldsm_logo" class="organisation_logo" src="./images/ldsm-logo.svg" alt="spektrix_logo">
+      </div>
     </ul>
+
+
+
     <hr class="solid">
     <h2 style="text-align:center">Education</h2>
     <ul id="education">
-      <li class="grow"><b>NorthCoders</b></br>
-      August 2020 - Present</br></br>
-      A full time intensive course in full stack software development, based on JavaScript and surrounding technologies, such as Nodejs, React and various libraries. The learning undertaken ranges from backend work, such as the setup of demo servers and seeding SQL databases,
-      to frontend work such as building responsive web applications using React. The aim of the course is to build a portfolio of projects, whilst also learning how to work on a developer (e.g. working in sprints, pair programming etc.). See the Projects page for a list of ongoing work that has come out of the course.
-  </li>
-    <li class="grow"><b>MA Arts Management, Policy and Practice - The University of Manchester</b></br>
-      September 2014 - November 2016</br></br>
-      Studied the politics, economics and practicality of managing arts organisations in the UK. Included a 15,000 word dissertation and a work placement at an arts organisation.</li>
-    <li class="grow"><b>BA Music - Lancaster University</b></br>
-      September 2009 - July 2012</br></br>
-      Studied the theory and performance of classical music. Also active in many societies, such as the Music society, and was course representative to the Faculty in my third year.
-    </li>
+      <div class="education_wrapper_grow">
+        <li class="grow"><b>NorthCoders</b></br>
+        August 2020 - Present</br></br>
+        A full time intensive course in full stack software development, based on JavaScript and surrounding technologies, such as Nodejs, React and various libraries. The learning undertaken ranges from backend work, such as the setup of demo servers and seeding SQL databases,
+        to frontend work such as building responsive web applications using React. The aim of the course is to build a portfolio of projects, whilst also learning how to work on a developer (e.g. working in sprints, pair programming etc.). See the Projects page for a list of ongoing work that has come out of the course.
+        </li>
+      </div>
+      <img class="education_arrow" src="./images/blue-up-arrow-on-white-background-up-arrow-sign-vector-17162763.jpg" alt="">
+
+      <div class="education_wrapper_grow">
+        <li class="grow"><b>MA Arts Management, Policy and Practice - The University of Manchester</b></br>
+          September 2014 - November 2016</br></br>
+          Studied the politics, economics and practicality of managing arts organisations in the UK. Included a 15,000 word dissertation and a work placement at an arts organisation.</li>
+      </div>
+      <img class="education_arrow" src="./images/blue-up-arrow-on-white-background-up-arrow-sign-vector-17162763.jpg" alt="">
+
+      <div class="education_wrapper_grow">
+        <li class="grow"><b>BA Music - Lancaster University</b></br>
+        September 2009 - July 2012</br></br>
+        Studied the theory and performance of classical music. Also active in many societies, such as the Music society, and was course representative to the Faculty in my third year.
+      </li>
+    </div>
     </ul>
     <footer>
         <div id="footerdiv">
