increase responsiveness of work page

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a class="active-page" href="about.html">About</a>
-      <a href="my_work.html">Examples of Work</a>
+      <a href="my_work.html">My Work</a>
       <a href="#">Contact</a>
     </nav>
     <h2 style="text-align:center">Bio</h2>
