--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <nav>
       <a class="active-page" href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="#">Examples of Work</a>
+      <a href="my_work.html">My Work</a>
       <a href="#">Contact</a>
     </nav>
     <p id="homebio">
